--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prod-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/index.jsx",
     "dev-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/index.jsx --dev",
     "dev-client": "vite client --host",
-    "preview": "npm run build && npm run prod-server",
-    "build": "npm run create-index && vite build client --outDir assets/dist && npm run delete-index",
+    "preview": "npm run build & npm run prod-server",
+    "build": "npm run create-index && vite build client --outDir assets/dist",
     "final": "deno pack server or deno bundle server",
     "deploy": "npm run build && npm run final",
     "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i",
