--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "preact": "^10.8.1",
-    "preact-render-to-string": "^5.2.0"
+    "preact-render-to-string": "^5.2.0",
+    "preacting": "^0.0.2"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.2.0",
