--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "dependencies": {
     "@preact/signals": "^1.2.2",
+    "content-visibility": "^1.2.2",
     "object-hash": "^3.0.0",
     "preact": "^10.8.1",
     "preact-render-to-string": "^5.2.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.2.0",
-    "vite": "^2.9.2"
+    "vite": "^2.9.2",
+    "vite-plugin-remote-assets": "^0.4.0"
   }
 }
