--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "denovitepreact",
   "version": "0.0.1",
   "private": false,
+  "type": "module",
   "scripts": {
     "start": "npm run dev-client & npm run dev-server",
     "prod-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/main.jsx",
@@ -17,14 +18,11 @@
   },
   "dependencies": {
     "@preact/signals": "^1.2.2",
-    "content-visibility": "^1.2.2",
-    "object-hash": "^3.0.0",
-    "preact": "^10.19.2",
+    "preact": "^10.19.3",
     "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.2.0",
-    "vite": "^2.9.2",
-    "vite-plugin-remote-assets": "^0.4.0"
+    "@preact/preset-vite": "^2.7.0",
+    "vite": "^5"
   }
 }
