--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "build": "npm run create-index && vite build client --outDir dist --watch",
     "final": "deno pack server or deno bundle server",
     "deploy": "npm run build && npm run final",
-    "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i",
-    "create-index": "echo '<script rel=\"preconnect\" type=\"module\" crossorigin src=\"./main.jsx\"></script><link rel=\"stylesheet\" href=\"./index.css\" />' > ./client/index.html",
-    "delete-index": "rm ./client/index.html && rm ./client/assets/dist/index.html"
+    "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i"
   },
   "dependencies": {
     "@preact/signals": "^1.3.0",
     "preact": "^10.24.3",
-    "preact-render-to-string": "^6.5.11"
+    "preact-render-to-string": "^6.5.11",
+    "lightweight-router": "^1.0.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
