--- a/package.json
+++ b/package.json
@@ -2,25 +2,26 @@
   "name": "denovitepreact",
   "version": "0.0.1",
   "private": false,
+  "type": "module",
   "scripts": {
     "start": "npm run dev-client & npm run dev-server",
-    "prod-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/index.jsx",
-    "dev-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/index.jsx --dev",
+    "prod-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/main.jsx",
+    "dev-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/main.jsx --dev",
     "dev-client": "vite client --host",
     "preview": "npm run build & npm run prod-server",
-    "build": "npm run create-index && vite build client --outDir assets/dist",
+    "build": "npm run create-index && vite build client --outDir dist --watch",
     "final": "deno pack server or deno bundle server",
     "deploy": "npm run build && npm run final",
-    "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i",
-    "create-index": "echo '<script rel=\"preconnect\" type=\"module\" crossorigin src=\"./index.jsx\"></script>' > ./client/index.html",
-    "delete-index": "rm ./client/index.html && rm ./client/assets/dist/index.html"
+    "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i"
   },
   "dependencies": {
-    "preact": "^10.8.1",
-    "preact-render-to-string": "^5.2.0"
+    "@preact/signals": "^1.3.0",
+    "preact": "^10.24.3",
+    "preact-render-to-string": "^6.5.11",
+    "lightweight-router": "^1.0.4"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.2.0",
-    "vite": "^2.9.2"
+    "@preact/preset-vite": "^2.9.1",
+    "vite": "^5"
   }
 }
