--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "npm run dev-client & npm run dev-server",
     "prod-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/main.jsx",
     "dev-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/main.jsx --dev",
-    "dev-client": "vite client --host",
+    "dev-client": "npx vite client --host",
     "preview": "npm run build & npm run prod-server",
-    "build": "npm run create-index && vite build client --outDir dist --watch",
+    "build": "npm run create-index && npx vite build client --outDir dist --watch",
     "final": "deno pack server or deno bundle server",
     "deploy": "npm run build && npm run final",
-    "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i"
+    "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i",
+    "create-index": "echo '<script rel=\"preconnect\" type=\"module\" crossorigin src=\"./main.jsx\"></script><link rel=\"stylesheet\" href=\"./index.css\" />' > ./client/index.html",
+    "delete-index": "rm ./client/index.html && rm ./client/assets/dist/index.html"
   },
   "dependencies": {
     "@preact/signals": "^1.3.0",
