--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "start": "npm i && npm run dev-server & npm run dev-client",
+    "start": "npm install && npm run dev-client & npm run dev-server",
     "prod-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/main.jsx",
     "dev-server": "deno run --unstable --allow-env --watch --no-check --allow-read --allow-ffi --allow-run --allow-write --allow-net --allow-sys=networkInterfaces server/main.jsx --dev",
-    "dev-client": "npx vite client --host",
-    "preview": "npm run build & npm run prod-server",
-    "build": "npm run create-index && vite build client --outDir dist --watch",
+    "dev-client": "vite client --host",
+    "preview": "npm run build:watch & npm run prod-server",
+    "build": "vite build client --outDir dist",
+    "build:watch": "vite build client --outDir dist --watch",
     "final": "deno pack server or deno bundle server",
     "deploy": "npm run build && npm run final",
     "publish": "rm -d -r ./node_modules && rm package-lock.json && rm server/deno.lock && git publish && npm i",
@@ -18,7 +19,7 @@
     "test": "deno test --allow-net --allow-env --allow-read --allow-write --allow-run"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.9.1",
-    "vite": "^6.0.1"
+    "@preact/preset-vite": "^2.9.2",
+    "vite": "^6.0.2"
   }
 }
